Update CSS: Travail section

--- a/index.html
+++ b/index.html
@@ -150,12 +150,6 @@
             class="absolute z-0 brightness-50 blur-sm bg_a4"
           />
         </div>
-        <!--<div class="slider-nav">-->
-        <!--<a href="#slide-1"></a>-->
-        <!--<a href="#slide-2"></a>-->
-        <!--<a href="#slide-3"></a>-->
-        <!--<a href="#slide-4"></a>-->
-        <!--</div>-->
       </section>
       <div
         class="text-center absolute z-10 text-white w-full top-1/2 text-animation"
@@ -166,13 +160,8 @@
         <p class="text-white text-xl mt-10">Montreal, Quebec</p>
       </div>
     </header>
-    <section class="m-auto">
-      <div class="mx-auto flex items-center p-20 place-content-around">
-        <img
-          src="/kitchen.jpg"
-          alt="bath_background"
-          class="object-cover aspect-square w-5/12 drop-shadow-2xl rounded-lg"
-        />
+    <section class="m-auto p-20" id="travail">
+      <div class="mx-auto flex items-center place-content-around pb-10">
         <h2
           class="text-2xl font-title w-1/2 drop-shadow-md text-center font-display"
         >
@@ -189,37 +178,66 @@
           </span>
         </h2>
       </div>
-    </section>
-    <section class="m-auto p-20">
-      <h2 class="font-title text-3xl text-center font-bold mb-10" id="travail">
-        Notre Travail
-      </h2>
-      <div class="grid grid-cols-2 gap-10 mx-auto content-center">
-        <div class="flex justify-center">
+      <div
+        class="grid grid-cols-autofill gap-10 mx-auto content-center justify-center"
+      >
+        <div class="relative _service">
+          <div
+            class="absolute justify-center min-h-0 z-10 text-center text-white -translate-y-1/2 top-1/2 bg-[rgba(0,0,0,0.6)] w-full"
+          >
+            <h3 class="text-3xl text-center font-bold py-5 tracking-widest">
+              HOUSE
+            </h3>
+            <p class="invisible opacity-0 min-h-0 absolute">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
+              recusandae voluptatem doloremque dolorum vero exercitationem
+              perspiciatis velit voluptas deserunt ea! Commodi magnam vel
+              perspiciatis accusamus iusto esse, maxime earum ab?
+            </p>
+          </div>
           <img
-            src="https://images.unsplash.com/photo-1552242718-c5360894aecd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80"
-            alt="work2"
+            src="https://images.unsplash.com/photo-1505691723518-36a5ac3be353?auto=format&fit=crop&q=80&w=1740&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="service_house"
             class="aspect-square rounded-lg drop-shadow-md"
           />
         </div>
-        <div class="flex justify-center">
+        <div class="relative _service">
+          <div
+            class="absolute justify-center min-h-0 z-10 text-center text-white -translate-y-1/2 top-1/2 bg-[rgba(0,0,0,0.6)] w-full"
+          >
+            <h3 class="text-3xl text-center font-bold py-5 tracking-widest">
+              OFFICE
+            </h3>
+            <p class="invisible opacity-0 min-h-0 absolute">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
+              recusandae voluptatem doloremque dolorum vero exercitationem
+              perspiciatis velit voluptas deserunt ea! Commodi magnam vel
+              perspiciatis accusamus iusto esse, maxime earum ab?
+            </p>
+          </div>
           <img
-            src="https://images.unsplash.com/photo-1564078516393-cf04bd966897?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80"
-            alt="work3"
+            src="https://images.unsplash.com/photo-1497366754035-f200968a6e72?auto=format&fit=crop&q=80&w=1738&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="service_office"
             class="aspect-square rounded-lg drop-shadow-md"
           />
         </div>
-        <div class="flex justify-center">
+        <div class="relative _service">
+          <div
+            class="absolute justify-center min-h-0 z-10 text-center text-white -translate-y-1/2 top-1/2 bg-[rgba(0,0,0,0.6)] w-full"
+          >
+            <h3 class="text-3xl text-center font-bold py-5 tracking-widest">
+              OPEN SPACES
+            </h3>
+            <p class="invisible opacity-0 min-h-0 absolute">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
+              recusandae voluptatem doloremque dolorum vero exercitationem
+              perspiciatis velit voluptas deserunt ea! Commodi magnam vel
+              perspiciatis accusamus iusto esse, maxime earum ab?
+            </p>
+          </div>
           <img
-            src="https://images.unsplash.com/photo-1610123172763-1f587473048f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1601&q=80"
-            alt="work1"
-            class="aspect-square rounded-lg drop-shadow-md"
-          />
-        </div>
-        <div class="flex justify-center">
-          <img
-            src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80"
-            alt="work4"
+            src="https://images.unsplash.com/photo-1575886876783-ea3cbbc8204d?auto=format&fit=crop&q=80&w=1668&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="service_openspaces"
             class="aspect-square rounded-lg drop-shadow-md"
           />
         </div>
@@ -242,7 +260,7 @@
             ></path>
           </svg>
         </div>
-        <p class="text-2xl font-title drop-shadow-md text-center my-40">
+        <p class="text-2xl font-title drop-shadow-md text-center my-20">
           Notre équipe va au-delà des attentes pour répondre aux besoins
           spécifiques de chaque propriété. Grâce à une communication ouverte et
           à un service exceptionnel, nous espérons que vous trouverez ce que
