New Feature: Carousel Infinite

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
+    <script
+      src="https://code.jquery.com/jquery-2.2.0.min.js"
+      type="text/javascript"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script>
   </head>
   <body>
     <a
@@ -197,74 +202,125 @@
           les prix du marché.
         </span>
       </div>
-      <div
-        class="grid grid-cols-autofill gap-10 mx-auto content-center justify-center"
-      >
-        <div class="relative _service">
-          <div
-            class="absolute justify-center min-h-0 z-10 text-center text-white -translate-y-1/2 top-1/2 bg-[rgba(0,0,0,0.6)] w-full"
-          >
-            <h3
-              class="md:text-3xl text-xl text-center font-bold md:py-5 py-2 tracking-widest"
-            >
-              HOUSE
-            </h3>
-            <p
-              class="invisible opacity-0 min-h-0 absolute text-sm md:text-lg px-2"
-            >
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
-              recusandae voluptatem doloremque dolorum vero exercitationem
-            </p>
+      <div class="pb-32">
+        <div class="_container pl-32">
+          <div class="_center _slider">
+            <div class="relative service _service">
+              <div
+                class="absolute justify-center min-h-0 z-10 text-center text-white -translate-y-1/2 top-1/2 bg-[rgba(0,0,0,0.6)] w-full"
+              >
+                <h3
+                  class="md:text-3xl text-xl text-center font-bold py-2 tracking-widest"
+                >
+                  HOUSE
+                </h3>
+                <p
+                  class="invisible opacity-0 min-h-0 absolute text-sm md:text-lg px-2"
+                >
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Officiis recusandae voluptatem doloremque dolorum vero
+                  exercitationem
+                </p>
+              </div>
+              <img
+                src="https://images.unsplash.com/photo-1505691723518-36a5ac3be353?auto=format&fit=crop&q=80&w=1740&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="service_house"
+                class="aspect-square rounded-lg drop-shadow-md"
+              />
+            </div>
+            <div class="relative service _service">
+              <div
+                class="absolute justify-center min-h-0 z-10 text-center text-white -translate-y-1/2 top-1/2 bg-[rgba(0,0,0,0.6)] w-full"
+              >
+                <h3
+                  class="md:text-3xl text-xl text-center font-bold py-2 tracking-widest"
+                >
+                  OFFICE
+                </h3>
+                <p
+                  class="invisible opacity-0 min-h-0 absolute text-sm md:text-lg px-2"
+                >
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Officiis recusandae voluptatem doloremque dolorum vero
+                  exercitationem
+                </p>
+              </div>
+              <img
+                src="https://images.unsplash.com/photo-1497366754035-f200968a6e72?auto=format&fit=crop&q=80&w=1738&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="service_office"
+                class="aspect-square rounded-lg drop-shadow-md"
+              />
+            </div>
+            <div class="relative service _service">
+              <div
+                class="absolute justify-center min-h-0 z-10 text-center text-white -translate-y-1/2 top-1/2 bg-[rgba(0,0,0,0.6)] w-full"
+              >
+                <h3
+                  class="md:text-3xl text-xl text-center font-bold py-2 tracking-widest"
+                >
+                  OPEN SPACES
+                </h3>
+                <p
+                  class="invisible opacity-0 min-h-0 absolute text-sm md:text-lg px-2"
+                >
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Officiis recusandae voluptatem doloremque dolorum vero
+                  exercitationem
+                </p>
+              </div>
+              <img
+                src="https://images.unsplash.com/photo-1575886876783-ea3cbbc8204d?auto=format&fit=crop&q=80&w=1668&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="service_openspaces"
+                class="aspect-square rounded-lg drop-shadow-md"
+              />
+            </div>
+            <div class="relative service _service">
+              <div
+                class="absolute justify-center min-h-0 z-10 text-center text-white -translate-y-1/2 top-1/2 bg-[rgba(0,0,0,0.6)] w-full"
+              >
+                <h3
+                  class="md:text-3xl text-xl text-center font-bold py-2 tracking-widest"
+                >
+                  LOREM1
+                </h3>
+                <p
+                  class="invisible opacity-0 min-h-0 absolute text-sm md:text-lg px-2"
+                >
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Officiis recusandae voluptatem doloremque dolorum vero
+                  exercitationem
+                </p>
+              </div>
+              <img
+                src="https://images.unsplash.com/photo-1575886876783-ea3cbbc8204d?auto=format&fit=crop&q=80&w=1668&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="service_openspaces"
+                class="aspect-square rounded-lg drop-shadow-md"
+              />
+            </div>
+            <div class="relative service _service">
+              <div
+                class="absolute justify-center min-h-0 z-10 text-center text-white -translate-y-1/2 top-1/2 bg-[rgba(0,0,0,0.6)] w-full"
+              >
+                <h3
+                  class="md:text-3xl text-xl text-center font-bold py-2 tracking-widest"
+                >
+                  LOREM2
+                </h3>
+                <p
+                  class="invisible opacity-0 min-h-0 absolute text-sm md:text-lg px-2"
+                >
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Officiis recusandae voluptatem doloremque dolorum vero
+                  exercitationem
+                </p>
+              </div>
+              <img
+                src="https://images.unsplash.com/photo-1575886876783-ea3cbbc8204d?auto=format&fit=crop&q=80&w=1668&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="service_openspaces"
+                class="aspect-square rounded-lg drop-shadow-md"
+              />
+            </div>
           </div>
-          <img
-            src="https://images.unsplash.com/photo-1505691723518-36a5ac3be353?auto=format&fit=crop&q=80&w=1740&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="service_house"
-            class="aspect-square rounded-lg drop-shadow-md"
-          />
-        </div>
-        <div class="relative _service">
-          <div
-            class="absolute justify-center min-h-0 z-10 text-center text-white -translate-y-1/2 top-1/2 bg-[rgba(0,0,0,0.6)] w-full"
-          >
-            <h3
-              class="md:text-3xl text-xl text-center font-bold md:py-5 py-2 tracking-widest"
-            >
-              OFFICE
-            </h3>
-            <p
-              class="invisible opacity-0 min-h-0 absolute text-sm md:text-lg px-2"
-            >
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
-              recusandae voluptatem doloremque dolorum vero exercitationem
-            </p>
-          </div>
-          <img
-            src="https://images.unsplash.com/photo-1497366754035-f200968a6e72?auto=format&fit=crop&q=80&w=1738&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="service_office"
-            class="aspect-square rounded-lg drop-shadow-md"
-          />
-        </div>
-        <div class="relative _service">
-          <div
-            class="absolute justify-center min-h-0 z-10 text-center text-white -translate-y-1/2 top-1/2 bg-[rgba(0,0,0,0.6)] w-full"
-          >
-            <h3
-              class="md:text-3xl text-xl text-center font-bold md:py-5 py-2 tracking-widest"
-            >
-              OPEN SPACES
-            </h3>
-            <p
-              class="invisible opacity-0 min-h-0 absolute text-sm md:text-lg px-2"
-            >
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
-              recusandae voluptatem doloremque dolorum vero exercitationem
-            </p>
-          </div>
-          <img
-            src="https://images.unsplash.com/photo-1575886876783-ea3cbbc8204d?auto=format&fit=crop&q=80&w=1668&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="service_openspaces"
-            class="aspect-square rounded-lg drop-shadow-md"
-          />
         </div>
       </div>
     </section>
@@ -356,6 +412,19 @@
         />
       </div>
     </section>
+    <script type="text/javascript">
+      $(document).on("ready", function () {
+        $("._center").slick({
+          dots: false,
+          infinite: true,
+          centerMode: false,
+          slidesToShow: 4,
+          slidesToScroll: 1,
+          autoplay: true,
+          autoplaySpeed: 2000,
+        });
+      });
+    </script>
     <script src="./main.js" type="module"></script>
   </body>
 </html>
